# Django-news-project

./: db.sqlite3  pyproject.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
articles/: models.py  views.py
articles/migrations/: 0001_initial.py
newspaper_project/: settings.py  urls.py
templates/: article_delete.html  article_detail.html  article_edit.html  article_list.html  article_new.html  base.html  home.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_confirm.html  password_reset_email.html  signup.html
